source/stylesheets/site.css
* {
	margin: 0;
	padding: 0;
	font-family: Helvetica, tahoma, sans serif;
	box-sizing: border-box;
}

body {
	background: black;
}

.messageFin {
	display: none; 
	position: fixed;
	width: 100vw;
	max-width: 500px;
	height: 100vh;
	max-height: 850px;
	background: black;
	padding-top: 0px;
	top: 50%; left: 50%; 
	transform: translate(-50%, -50%);
	box-shadow: 0 3px #D0D0D0;
	z-index: 4;	
	overflow-x: hidden;
    overflow-y: scroll;
}

.messageFin img {
	max-width: 100%;
}

/* interface entière*/
.chatbox {
	width: 100vw;
	max-width: 500px;
	height: 100vh;
	max-height: 850px;
	background: #A9A9A9;
	padding-top: 0px;
	margin: 0px auto 0px auto;
	box-shadow: 0 3px #D0D0D0;
	border-radius: 0%;

}

.messageDebut {
	position: fixed;
	width: 100vw;
	max-width: 500px;
	height: 100vh;
	max-height: 850px;
	background: black;
	padding-top: 0px;
	top: 50%; left: 50%; 
	transform: translate(-50%, -50%);
	box-shadow: 0 3px #D0D0D0;
	z-index: 2;	
	overflow-x: hidden;
    overflow-y: scroll;
    text-align: center;
    color: white;
}


.transition {
	position: fixed;
	width: 100vw;
	max-width: 500px;
	height: 100vh;
	max-height: 850px;
	background: black;
	padding-top: 0px;
	top: 50%; left: 50%; 
	transform: translate(-50%, -50%);
	box-shadow: 0 3px #D0D0D0;
	z-index: 2;	
	overflow-x: hidden;
    overflow-y: scroll;
    text-align: center;
    color: white;
    display: none; 
}

.transition p {
	margin: auto;
	text-align: center;
}

.messageDebut img {
	max-width: 100%;
	z-index: 3;
	margin: 13% 0 10% 0;
}

.partenariat {
	padding: 20% 0 5% 0;
}

.partenariat p {
	margin-bottom: 3%;
}

.logos img {
	max-width: 17%;
	margin: 5px;
}

#ntech {
	max-width: 12%;
}

.btnBegin {
  border-radius: 13px;
  border-width: 0px;
  font-family: Helvetica, Arial;
  color: #ffffff;
  font-size: 20px;
  background: #1acca9;
  padding: 20px 25px 20px 25px;
  text-decoration: none;
  text-align: center;
  width:50%;
  margin-top: auto;
  margin-bottom: auto;
  user-select: none;
  cursor: pointer;
}

.btn:hover {
  background: #787878;
  text-decoration: none;
}

/* zone message*/
.chatlogs{
	padding: 20px;
	display: block;
	margin: auto; 
	width: 100%;
	height: 80%;
	background: #fff;
	overflow-x: hidden;
	overflow-y: scroll;
	border-radius: 0%;


}

.chatlogs::-webkit-scrollbar{
	width: 10px;
	display: none;

}

.chatlogs::-webkit-scrollbar-thumb{
	border-radius: 5px;
	background: rgba(0,0,0,.1);
}


.chat{
	display: flex;
	flex-flow: row nowrap;
	align-items: flex-start;
	margin-bottom: 0px;
	justify-content: center;

}



.chat .user-photo .one .two{
	width: 60px;
	height: 60px;
	background-color: #ccc;
	border-radius: 50%;

}

.one{
	width: 100%;
	width: 35px;
	height: 35px;
	background-color: #ccc;
	border-radius: 50%;
	margin-top: 25px;
	margin-left:-40px;
}

.two{
	width: 100%;
	width: 35px;
	height: 35px;
	background-color: #ccc;
	border-radius: 50%;
	margin-top: 8%;
	margin-left: 45px;
	margin-right:-35px;
}

.chat .chat-message {
	width: 70%;
	padding: 15px;
	margin: 10px 10px 0;
	color: #fff;
	font-size: 18px;
}

.screen {
	max-width: 95%;
}

.friend {
	margin-right: 27%;
}

.friend .chat-message{

	background-color: #e5e5ea;
	color:#303030;
		border-radius: 25px 25px 25px 8px;
}

.self {
	margin-left: 24%;
}

.self .chat-message{
	margin-right: -30px;
	background-color: #1acca9;
	order: -1;
	border-radius: 25px 25px 8px 25px;
}


.chat .self{
	align-items: flex-end;
}


/* blockblanc*/
.chatform{
	background-color: #EFEFEF;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
	height: 20%;
}

.option{
	padding: 18px;
	background-color: #EFEFEF;
	text-align: center;
	color: #303030;
	flex-grow: 1;
	flex-shrink: 1;
	width: 100%;
	border-bottom: 1px solid #FFFFFF;
	user-select: none;
	cursor: pointer;

}

.option:hover{
	background-color: #e5e5ea;
	color: #1acca9;
}

/*header*/
.header {
	position: fixed;
	z-index: 1;
	width:100vw;
	max-width: 500px;
	height: 12%;
	background-color: #EFEFEF;
    opacity: .975;
    padding-top: 10px;
    padding-bottom: 5px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.iconesHeader {
	height: 70%;
	width: 90%;
	display: flex;
	justify-content: space-between;
	align-items: center;
}
#head {
	margin: auto;
	min-height: 7.0vh;
	min-width: 7.0vh; 
}

.iconesHeader img {
	max-height: 5vh;
	width: 5vh;
	margin-top: 0px;
}

.nomHeader {
	height: 30%;
	padding-top: 3px;
	text-align: center;
	font-size: 0.8em;
	color: #5A5E6B;
}


/*trois petits points */

@keyframes blink {
    /**
     * At the start of the animation the dot
     * has an opacity of .2
     */
    0% {
      opacity: .2;
    }
    /**
     * At 20% the dot is fully visible and
     * then fades out slowly
     */
    20% {
      opacity: 1;
    }
    /**
     * Until it reaches an opacity of .2 and
     * the animation can start again
     */
    100% {
      opacity: .2;
    }
}



.saving span {
    /**
     * Use the blink animation, which is defined above
     */
    animation-name: blink;
    /**
     * The animation should take 1.4 seconds
     */
    animation-duration: 1.4s;
    /**
     * It will repeat itself forever
     */
    animation-iteration-count: infinite;
    /**
     * This makes sure that the starting style (opacity: .2)
     * of the animation is applied before the animation starts.
     * Otherwise we would see a short flash or would have
     * to set the default styling of the dots to the same
     * as the animation. Same applies for the ending styles.
     */
    animation-fill-mode: both;
}

.saving span:nth-child(2) {
    /**
     * Starts the animation of the third dot
     * with a delay of .2s, otherwise all dots
     * would animate at the same time
     */
    animation-delay: .2s;
}

.saving span:nth-child(3) {
    /**
     * Starts the animation of the third dot
     * with a delay of .4s, otherwise all dots
     * would animate at the same time
     */
    animation-delay: .4s;
}

